derive-ex-tests/tests/compile_fail/derive_debug/not_impl_debug.stderr
error[E0277]: `NotImplDebug` doesn't implement `Debug`
 --> tests/compile_fail/derive_debug/not_impl_debug.rs:7:12
  |
7 |     field: NotImplDebug,
  |            ^^^^^^^^^^^^ the trait `Debug` is not implemented for `NotImplDebug`
  |
  = note: add `#[derive(Debug)]` to `NotImplDebug` or manually `impl Debug for NotImplDebug`
  = note: required for the cast from `&NotImplDebug` to `&dyn Debug`
help: consider annotating `NotImplDebug` with `#[derive(Debug)]`
  |
3 + #[derive(Debug)]
4 | struct NotImplDebug;
  |
